# doctor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
.specify/: .gitignore  feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: PRD.md
specs/001-diagnostic-engine-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-model-builder-java-parser/: plan.md  spec.md  tasks.md
specs/003-auto-config-bean-awareness/: plan.md  spec.md  tasks.md
specs/004-interface-impl-matching/: plan.md  spec.md
specs/005-rust-psi-engine/: plan.md  spec.md  tasks.md
specs/006-framework-bean-discovery/: spec.md
src/: config.rs  error.rs  lib.rs  main.rs
src/ai/: explain.rs  mod.rs  summary.rs
src/classpath/: cache.rs  class_parser.rs  jar_scanner.rs  mod.rs
src/cli/: diagnose.rs  explain.rs  mod.rs
src/evidence/: actuator.rs  config_file.rs  mod.rs  source.rs  types.rs
src/model/: auto_config.rs  bean_graph.rs  category.rs  confidence.rs  config.rs  issue.rs  mod.rs  report.rs  severity.rs  summary.rs  system_model.rs  system_overview.rs
src/output/: html.rs  json.rs  markdown.rs  mask.rs  mod.rs  sarif.rs  terminal.rs
src/plugin/: mod.rs  registry.rs  traits.rs
src/psi/: ast.rs  bean_collector.rs  cst.rs  index.rs  mod.rs
src/rule_engine/: auto_config_rules.rs  bean_rules.rs  config_rules.rs  mod.rs  startup_rules.rs  (+1 more)
tests/: explain_test.rs
(+10 files in other folders)
