[package]
name = "doctor"
version = "0.1.0"
edition = "2024"
description = "AI-native diagnostic engine for software systems"
license = "Apache-2.0"
repository = "https://github.com/conifercone/doctor"

[[bin]]
name = "doctor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
quick-xml = "0.37"
walkdir = "2"
colored = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-java = "0.23"
sled = "0.34"

[dev-dependencies]
tempfile = "3"
